fix lang text on safari

--- a/components/Navbar/index.module.scss
+++ b/components/Navbar/index.module.scss
@@ -26,7 +26,7 @@
     cursor: pointer;
     width: 77.39px;
     height: 48.08px;
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 992px) {
       width: 37.22px;
       height: 23px;
       margin-right: auto;
@@ -39,7 +39,7 @@
     }
   }
   .search_icon_mobile {
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 992px) {
       margin-right: 10px;
       margin-left: 10px;
     }
@@ -55,7 +55,7 @@
     flex-direction: row;
     .search_icon {
       cursor: pointer;
-      @media screen and (max-width: 450px) {
+      @media screen and (max-width: 992px) {
         display: none;
       }
       .img {
@@ -65,11 +65,15 @@
     .lang {
       margin-right: 24px;
       margin-left: 24px;
-      @media screen and (max-width: 450px) {
+      @media screen and (max-width: 992px) {
         margin-right: 10px;
         margin-left: 10px;
       }
-
+      @supports (-webkit-appearance: none) {
+        p {
+          margin-top: 0px;
+        }
+      }
       p {
         margin-top: 7px;
         font-size: 18px;
@@ -77,7 +81,7 @@
         text-align: center;
         font-family: var(--effra-font);
         color: rgba(17, 41, 47, 1) !important;
-        @media screen and (max-width: 450px) {
+        @media screen and (max-width: 992px) {
           font-size: 11.25px;
         }
       }
@@ -96,7 +100,7 @@
         border: 1px solid var(--primary-dark-green, #11292f);
         line-height: 0;
 
-        @media screen and (max-width: 450px) {
+        @media screen and (max-width: 992px) {
           width: 98px;
           height: 30px;
           font-size: 11.27px;
@@ -128,7 +132,7 @@
     transform: 0.3s ease-in-out !important;
     min-width: inherit !important;
 
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 992px) {
       width: 30.16px;
       height: 30px;
     }
